Added homepage content initial

--- a/index.html
+++ b/index.html
@@ -37,5 +37,67 @@
       <p>Front-end developer based in Swaziland</p>
       <a href="#" class="btn btn-branding mt-5">Contact me</a>
     </div>
+    <h6 class="text-info mt-4 mb-4">Some of my awesome projects</h6>
+    <div class="container mb-5">
+      <div class="row">
+        <div class="col-sm-6 mt-4 mb-5">
+          <img
+            src="images/weather.PNG"
+            alt=""
+            class="img-fluid mt-5 shadow d-none d-sm-flex"
+          />
+        </div>
+        <div class="col-sm-6 mt-4 mb-5">
+          <div class="project-description">
+            <h2 class="sub-title mb-4">Weather App</h2>
+            <p class="">
+              The weather app also provides atmospheric pressure, weather
+              conditions, visibility distance, relative humidity, precipitation
+              in different unites, dew point, wind speed and direction, in
+              addition to ten days in future and hourly weather forecast.
+            </p>
+            <a href="_" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col-sm-6 mt-4 mb-5">
+          <div class="project-description">
+            <h2 class="sub-title mb-4">Weather App</h2>
+            <p>
+              The weather app also provides atmospheric pressure, weather
+              conditions, visibility distance, relative humidity, precipitation
+              in different unites, dew point, wind speed and direction, in
+              addition to ten days in future and hourly weather forecast.
+            </p>
+            <a href="_" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5">
+          <img
+            src="images/Weather-app.png"
+            alt=""
+            class="img-fluid shadow mt-5 d-none d-sm-flex"
+          />
+        </div>
+        <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5">
+          <img
+            src="images/weather.PNG"
+            alt=""
+            class="img-fluid shadow mt-5 d-none d-sm-flex"
+          />
+        </div>
+        <div class="col-sm-6 mt-4 d-none-mb-5">
+          <div class="project-description">
+            <h2 class="sub-title mb-4 mb-5">Weather App</h2>
+            <p>
+              The weather app also provides atmospheric pressure, weather
+              conditions, visibility distance, relative humidity, precipitation
+              in different unites, dew point, wind speed and direction, in
+              addition to ten days in future and hourly weather forecast.
+            </p>
+            <a href="_" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
