Updated index page and add the contact & work page

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Contact</title>
   </head>
   <body>
     <nav
@@ -64,16 +64,48 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <h2>Hello, I am</h2>
-      <h1 class="display-3">Mthabiseni Tsabedze</h1>
-      <p>Front-end developer based in Swaziland</p>
-      <a href="#" class="btn btn-branding mt-5">Contact me</a>
-    </div>
-
-    <h6 class="text-info mt-4 mb-4 d-none">Some of my awesome projects</h6>
-    <div class="container mt-5">
+    <div class="content-container">
+      <div class="conent contact-page">
+        <h1 class="display-2">Lets get in touch !</h1>
+        <h4 class="mt-5">Email</h4>
+        <p>
+          <a href="mailto:mthabisenit@gmail.com" class="communication"
+            >mthabisenit@gmail.com</a
+          >
+        </p>
+        <h4>Linkedin</h4>
+        <p>
+          <a href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+            >Mthabi</a
+          >
+        </p>
+        <h4>Githhub</h4>
+        <p>
+          <a href="https://github.com/MthabiKT">MthabiKT </a>
+        </p>
+        <h4>Instagram</h4>
+        <p>
+          <a href="https://www.instagram.com/kxren_t/">Karen_t</a>
+        </p>
+      </div>
       <footer>
+        <div
+          class="contact-box d-flex justify-content-evenly mb-5 d-none d-lg-flex"
+        >
+          <div>
+            <h3>Work Inquiry</h3>
+            <p>Lets work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              title="contact"
+              class="btn btn-branding mt-3"
+            >
+              Contact Me</a
+            >
+          </div>
+        </div>
         <div class="social-links d-flex justify-content-evenly mb-5">
           <a href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
             ><i class="fab fa-linkedin-in"></i
