--- a/about.html
+++ b/about.html
@@ -29,8 +29,42 @@
     <title>About</title>
   </head>
   <body>
-    <div class="container about-section">
-      <div class="about-content mt-4">
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top sticky nav-sticky"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Mthabi.T</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="work.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="content-container">
+      <div class="content mt-5">
         <div class="row">
           <div class="col-md-6 p-5">
             <h2 class="mb-4">A Creative Designer from Swaziland</h2>
@@ -43,7 +77,7 @@
             </p>
             <a href="#" class="btn btn-about mt-5">Veiw Projects →</a>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 mt-2">
             <img
               src="/images/image.png"
               class="img-fluid rounded-pill"
