added contact link on hero

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h2>Hello, I am</h2>
       <h1 class="display-3">Mthabiseni Tsabedze</h1>
       <p>Front-end developer based in Swaziland</p>
-      <a href="#" class="btn btn-branding mt-5">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding mt-5">Contact me</a>
     </div>
 
     <h6 class="text-info mt-4 mb-4 d-none">Some of my awesome projects</h6>
