Made website seo friendly

--- a/about.html
+++ b/about.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="My name is Mthabi.T. I'm 22 years old, I live in Swaziland. I am currently studying at an university. i've also been studying a lot on my own to leaarn new technologies and skills"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -69,19 +73,22 @@
           <div class="col-md-6 p-5">
             <h2 class="mb-4">A Creative Designer from Swaziland</h2>
             <p>
-              Hello there! I'm a web designer, and I'm very passionate and
-              dedicated to my work. With 20 years experience as a professional
-              web developer, I have acquired the skills and knowledge necessary
-              to make your project a success. I enjoy every step of the design
-              process, from discussion and collaboration.
+              Hello there! My name is Mthabi.T, I'm 22 years old.I live in
+              Swaziland. I am currently studying at an university. i've also
+              been studying a lot on my own to leaarn new technologies and
+              skills.
+              <br />
+              I started as a Front-End developer in 2021. Since then i have been
+              dedicating about 6hrs a day to studies. I see that i am on th riht
+              path because I see the results that the dedicates bours bring.
             </p>
-            <a href="#" class="btn btn-about mt-5">Veiw Projects →</a>
+            <a href="/work.html" class="btn btn-about mt-5">Veiw Projects →</a>
           </div>
           <div class="col-md-6 mt-2">
             <img
               src="/images/image.png"
               class="img-fluid rounded-pill"
-              alt=""
+              alt="profile picture"
             />
           </div>
         </div>
