--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Hello, I'm Mthabiseni Tsabedze. A Front-end developer based in Swaziland"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -27,7 +31,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>👩‍💻Portfolio: Front-End developer</title>
   </head>
   <body>
     <nav
@@ -72,16 +76,23 @@
     </div>
 
     <h6 class="text-info mt-4 mb-4 d-none">Some of my awesome projects</h6>
+
     <div class="container mt-5">
       <footer>
         <div class="social-links d-flex justify-content-evenly mb-5">
-          <a href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+          <a
+            href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+            title="linkedin"
+            target="_blank"
             ><i class="fab fa-linkedin-in"></i
           ></a>
-          <a href="https://www.instagram.com/kxren_t/"
+          <a
+            href="https://www.instagram.com/kxren_t/"
+            title="instagram"
+            target="_blank"
             ><i class="fab fa-instagram"></i
           ></a>
-          <a href="https://github.com/MthabiKT"
+          <a href="https://github.com/MthabiKT" title="github" target="_blank"
             ><i class="fab fa-github"></i>
           </a>
         </div>
