--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Take a look at the work I have done" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -27,7 +28,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
 
-    <title>Work</title>
+    <title>👩‍💻Work</title>
   </head>
   <body>
     <nav
@@ -72,7 +73,7 @@
           <div class="col-sm-6 mt-4 mb-5">
             <img
               src="images/weather.PNG"
-              alt=""
+              alt="weather image"
               class="img-fluid mt-5 shadow d-none d-sm-flex"
             />
           </div>
@@ -105,14 +106,14 @@
           <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5">
             <img
               src="images/Weather-app.png"
-              alt=""
+              alt="weather image"
               class="img-fluid shadow mt-5 d-none d-sm-flex"
             />
           </div>
           <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5">
             <img
               src="images/weather.PNG"
-              alt=""
+              alt="weather image"
               class="img-fluid shadow mt-5 d-none d-sm-flex"
             />
           </div>
