Updated work page

--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a class="nav-link" href="work.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -66,58 +66,53 @@
       </div>
     </nav>
 
-    <h1 class="display-3 text-center mt-5 pb-5">My Projects</h1>
+    <h2 class="display-5 text-center mt-5 py-5">My Projects</h2>
     <div class="background-image">
       <div class="container mb-5">
         <div class="row">
-          <div class="col-sm-6 mt-4 mb-5">
+          <div class="col-sm-6 mt-4 mb-5 py-4">
+            <div class="project-description">
+              <h2 class="sub-title mb-4">Coffee Shop</h2>
+              <p class="">
+                My first project built with HTML, CSS and JavaScript. I enrolled
+                coding classes from SheCodes Here is where my coding journey
+                began.
+              </p>
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-74375ca9-1279-458f-adfd-c7e6be345617/projects/570354"
+                target="_blank"
+                class="btn btn-branding-outline"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+          <div class="col-sm-6 mt-4 mb-5 py-4">
             <img
-              src="images/weather.PNG"
+              src="images/Coffee Shop.JPG"
               alt="weather image"
               class="img-fluid mt-5 shadow d-none d-sm-flex"
             />
           </div>
-          <div class="col-sm-6 mt-4 mb-5">
-            <div class="project-description">
-              <h2 class="sub-title mb-4">Weather App</h2>
-              <p class="">
-                The weather app also provides atmospheric pressure, weather
-                conditions, visibility distance, relative humidity,
-                precipitation in different unites, dew point, wind speed and
-                direction, in addition to ten days in future and hourly weather
-                forecast.
-              </p>
-              <a href="_" class="btn btn-branding-outline">Learn more</a>
-            </div>
-          </div>
-          <div class="col-sm-6 mt-4 mb-5">
-            <div class="project-description">
-              <h2 class="sub-title mb-4">Weather App</h2>
-              <p>
-                The weather app also provides atmospheric pressure, weather
-                conditions, visibility distance, relative humidity,
-                precipitation in different unites, dew point, wind speed and
-                direction, in addition to ten days in future and hourly weather
-                forecast.
-              </p>
-              <a href="_" class="btn btn-branding-outline">Learn more</a>
-            </div>
-          </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5">
+          <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5 py-4">
             <img
               src="images/Weather-app.png"
               alt="weather image"
               class="img-fluid shadow mt-5 d-none d-sm-flex"
             />
           </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5">
-            <img
-              src="images/weather.PNG"
-              alt="weather image"
-              class="img-fluid shadow mt-5 d-none d-sm-flex"
-            />
+          <div class="col-sm-6 mt-4 mb-5 py-4">
+            <div class="project-description">
+              <h2 class="sub-title mb-4">Vanilla-Weather-App</h2>
+              <p>
+                The weather app also provides atmospheric pressure, weather
+                conditions, relative humidity, unit conversion and wind speed
+                and, in addition to six days in future and hourly weather
+                forecast.
+              </p>
+              <a href="_" class="btn btn-branding-outline">Launch Project</a>
+            </div>
           </div>
-          <div class="col-sm-6 mt-4 d-none-mb-5">
+          <div class="col-sm-6 mt-4 d-none-mb-5 py-4">
             <div class="project-description">
               <h2 class="sub-title mb-4 mb-5">Weather App</h2>
               <p>
@@ -127,11 +122,47 @@
                 direction, in addition to ten days in future and hourly weather
                 forecast.
               </p>
-              <a href="_" class="btn btn-branding-outline">Learn more</a>
+              <a href="_" class="btn btn-branding-outline">Launch Project</a>
             </div>
+          </div>
+          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5 py-4">
+            <img
+              src="images/weather.PNG"
+              alt="weather image"
+              class="img-fluid shadow mt-5 d-none d-sm-flex"
+            />
           </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container pt-5"></div>
+      <div
+        class="contact-box d-flex justify-content-evenly mb-5 d-none d-lg-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Lets work together</p>
+        </div>
+        <div>
+          <a href="/contact.html" title="contact" class="btn btn-branding mt-3">
+            Contact Me</a
+          >
+        </div>
+      </div>
+      <div class="social-links d-flex justify-content-evenly mb-5">
+        <a href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.instagram.com/kxren_t/"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://github.com/MthabiKT"><i class="fab fa-github"></i> </a>
+      </div>
+      <p class="text-center mb-4">
+        This project was coded by Mthabiseni Karen Tsabedze
+        <a href="https://github.com/MthabiKT">Open-Sourced </a>
+      </p>
+    </footer>
   </body>
 </html>
