Added a footer on the about page

--- a/about.html
+++ b/about.html
@@ -79,8 +79,9 @@
               skills.
               <br />
               I started as a Front-End developer in 2021. Since then i have been
-              dedicating about 6hrs a day to studies. I see that i am on th riht
-              path because I see the results that the dedicates bours bring.
+              dedicating about 6hrs a day to studies. I see that i am on the
+              right path because I see the results that the dedicates bours
+              bring.
             </p>
             <a href="/work.html" class="btn btn-about mt-5">Veiw Projects →</a>
           </div>
@@ -94,5 +95,34 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container pt-5"></div>
+      <div
+        class="contact-box d-flex justify-content-evenly mb-5 d-none d-lg-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Lets work together</p>
+        </div>
+        <div>
+          <a href="/contact.html" title="contact" class="btn btn-branding mt-3">
+            Contact Me</a
+          >
+        </div>
+      </div>
+      <div class="social-links d-flex justify-content-evenly mb-5">
+        <a href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.instagram.com/kxren_t/"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://github.com/MthabiKT"><i class="fab fa-github"></i> </a>
+      </div>
+      <p class="text-center mb-4">
+        This project was coded by Mthabiseni Karen Tsabedze
+        <a href="https://github.com/MthabiKT">Open-Sourced </a>
+      </p>
+    </footer>
   </body>
 </html>
