--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
     <div class="content-container">
-      <div class="conent contact-page">
+      <div class="conent contact-page text-center">
         <h1 class="display-2">Lets get in touch !</h1>
         <h4 class="mt-5">Email</h4>
         <p>
