--- a/index.html
+++ b/index.html
@@ -74,8 +74,85 @@
       <p>Front-end developer based in Swaziland</p>
       <a href="/contact.html" class="btn btn-branding mt-5">Contact me</a>
     </div>
-
-    <h6 class="text-info mt-4 mb-4 d-none">Some of my awesome projects</h6>
+    <div class="container">
+      <div class="skills-section">
+        <h2 class="text-center display-6">
+          Skills & Softwares
+        </h2>
+        <h6 class="text-center">
+          Technical skills, languages and softwares I use.
+        </h6>
+      </div>
+        <div class="row">
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-html.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-css.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-js.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-vsCode.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-api.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img class="image-fluid shadow" src="images/logos/gitHub.png" />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-bootstrap.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-hosting.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-flexbox.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="image-fluid shadow"
+              src="images/logos/logo-softwares-seo.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img
+              class="shadow"
+              src="images/logos/logo-softwares-responisive.png"
+            />
+          </div>
+          <div class="col-sm-3 skill-visual">
+            <img class="shadow" src="images/logos/logo-softwares-react.png" />
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="container mt-5">
       <footer>
