Changed work page layout

--- a/work.html
+++ b/work.html
@@ -31,9 +31,7 @@
     <title>👩‍💻Work</title>
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light fixed-top sticky nav-sticky"
-    >
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top sticky">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Mthabi.T</a>
         <button
@@ -71,8 +69,80 @@
 
     <h2 class="display-5 text-center mt-5 py-5">My Projects</h2>
     <div class="background-image">
-      <div class="container mb-5">
+      <div class="container p-3 mb-5 text-center">
         <div class="row">
+          <div class="col-sm-6 mt-4 d-none-mb-5 py-4">
+            <div class="project-description">
+              <h2 class="sub-title mb-4 mb-5">React Dictionary</h2>
+              <p>
+                My most recent project I worked on. A dictionary made with react
+                with multiple components and an API integration to help user
+                search for any word
+              </p>
+              <a
+                href="https://vocal-starship-ad8530.netlify.app/"
+                target="_blank"
+                class="btn btn-branding-outline"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5 py-4">
+            <img
+              src="images/React dictionary.JPG"
+              alt="weather image"
+              class="img-fluid shadow mt-5 d-none d-sm-flex"
+            />
+          </div>
+          <div class="col-sm-6 mt-4 mb-5 py-4">
+            <div class="project-description">
+              <h2 class="sub-title mb-4">Vanilla-Weather-App</h2>
+              <p>
+                The weather app also provides atmospheric pressure, weather
+                conditions, relative humidity, unit conversion and wind speed
+                and, in addition to six days in future and hourly weather
+                forecast.
+              </p>
+              <a href=""><i class="fas fa-external-link"></i></a>
+              <a
+                href="https://tender-lewin-d1e81b.netlify.app/"
+                class="btn btn-branding-outline"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+          <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5 py-4">
+            <img
+              src="images/Weather-app.png"
+              alt="weather image"
+              class="img-fluid shadow mt-5 d-none d-sm-flex"
+            />
+          </div>
+          <div class="col-sm-6 mt-4 d-none-mb-5 py-4">
+            <div class="project-description">
+              <h2 class="sub-title mb-4 mb-5">Weather App</h2>
+              <p>
+                The weather app also provides atmospheric pressure, weather
+                conditions, visibility distance, relative humidity,
+                precipitation in different unites, dew point, wind speed and
+                direction, in addition to ten days in future and hourly weather
+                forecast.
+              </p>
+              <a
+                href="https://nifty-volhard-4afc0a.netlify.app"
+                class="btn btn-branding-outline"
+                >Launch Project</a
+              >
+            </div>
+          </div>
+          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5 py-4">
+            <img
+              src="images/weather.PNG"
+              alt="weather image"
+              class="img-fluid shadow mt-5 d-none d-sm-flex"
+            />
+          </div>
+
           <div class="col-sm-6 mt-4 mb-5 py-4">
             <div class="project-description">
               <h2 class="sub-title mb-4">Coffee Shop</h2>
@@ -94,45 +164,6 @@
               src="images/Coffee Shop.JPG"
               alt="weather image"
               class="img-fluid mt-5 shadow d-none d-sm-flex"
-            />
-          </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5 py-4">
-            <img
-              src="images/Weather-app.png"
-              alt="weather image"
-              class="img-fluid shadow mt-5 d-none d-sm-flex"
-            />
-          </div>
-          <div class="col-sm-6 mt-4 mb-5 py-4">
-            <div class="project-description">
-              <h2 class="sub-title mb-4">Vanilla-Weather-App</h2>
-              <p>
-                The weather app also provides atmospheric pressure, weather
-                conditions, relative humidity, unit conversion and wind speed
-                and, in addition to six days in future and hourly weather
-                forecast.
-              </p>
-              <a href="_" class="btn btn-branding-outline">Launch Project</a>
-            </div>
-          </div>
-          <div class="col-sm-6 mt-4 d-none-mb-5 py-4">
-            <div class="project-description">
-              <h2 class="sub-title mb-4 mb-5">Weather App</h2>
-              <p>
-                The weather app also provides atmospheric pressure, weather
-                conditions, visibility distance, relative humidity,
-                precipitation in different unites, dew point, wind speed and
-                direction, in addition to ten days in future and hourly weather
-                forecast.
-              </p>
-              <a href="_" class="btn btn-branding-outline">Launch Project</a>
-            </div>
-          </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5 py-4">
-            <img
-              src="images/weather.PNG"
-              alt="weather image"
-              class="img-fluid shadow mt-5 d-none d-sm-flex"
             />
           </div>
         </div>
