Improved the about page

--- a/about.html
+++ b/about.html
@@ -49,7 +49,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -73,19 +76,20 @@
           <div class="col-md-6 p-5">
             <h2 class="mb-4">A Creative Designer from Swaziland</h2>
             <p>
-              Hello there! My name is Mthabi.T, I'm 22 years old.I live in
-              Swaziland. I am currently studying at an university. i've also
-              been studying a lot on my own to leaarn new technologies and
-              skills.
+              Hello there! My name is Mthabiseni Tsabedze and I am Swazi
+              Front-End Developer. I am currently studying at an university.
+              i've also been studying a lot on my own to leaarn new technologies
+              and skills.
               <br />
-              I started as a Front-End developer in 2021. Since then i have been
-              dedicating about 6hrs a day to studies. I see that i am on the
-              right path because I see the results that the dedicates bours
-              bring.
+              <br />
+              I started as a Front-End developer in 2021 then went on to learn
+              React with SheCodes 2022. Since then i have been dedicating about
+              6hrs a day to studies. I see that i am on the right path because I
+              see the results that the dedicates bours bring.
             </p>
             <a href="/work.html" class="btn btn-about mt-5">Veiw Projects →</a>
           </div>
-          <div class="col-md-6 mt-2">
+          <div class="col-md-6 mt-2 p-5 pt-3">
             <img
               src="/images/image.png"
               class="img-fluid rounded-pill"
