Improved the footer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <script
       src="https://kit.fontawesome.com/1ba27f1bfa.js"
       crossorigin="anonymous"
@@ -50,7 +54,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -75,109 +82,183 @@
       <a href="/contact.html" class="btn btn-branding mt-5">Contact me</a>
     </div>
     <div class="container">
+      <div class="projects py-5">
+        <h3
+          class="text-muted border-bottom border-info py-1 d-inline-block mb-5"
+        >
+          Projects
+        </h3>
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-8"></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
       <div class="skills-section">
-        <h2 class="text-center display-6">
-          Skills & Softwares
-        </h2>
+        <h2 class="text-center display-6">Skills & Softwares</h2>
         <h6 class="text-center">
           Technical skills, languages and softwares I use.
         </h6>
       </div>
-        <div class="row">
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-html.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-css.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-js.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-vsCode.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-api.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img class="image-fluid shadow" src="images/logos/gitHub.png" />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-bootstrap.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-hosting.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-flexbox.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="image-fluid shadow"
-              src="images/logos/logo-softwares-seo.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img
-              class="shadow"
-              src="images/logos/logo-softwares-responisive.png"
-            />
-          </div>
-          <div class="col-sm-3 skill-visual">
-            <img class="shadow" src="images/logos/logo-softwares-react.png" />
-          </div>
+      <div class="row">
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-html.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-css.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-js.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-vsCode.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-api.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img class="image-fluid shadow" src="images/logos/gitHub.png" />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-bootstrap.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-hosting.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-flexbox.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="image-fluid shadow"
+            src="images/logos/logo-softwares-seo.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img
+            class="shadow"
+            src="images/logos/logo-softwares-responisive.png"
+          />
+        </div>
+        <div class="col-sm-3 skill-visual">
+          <img class="shadow" src="images/logos/logo-softwares-react.png" />
         </div>
       </div>
     </div>
+    <footer>
+      <div class="bg">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 footer-left">
+              <a href="#" class="logo" title="logo">Mthabiseni.Tsabedze </a>
 
-    <div class="container mt-5">
-      <footer>
-        <div class="social-links d-flex justify-content-evenly mb-5">
-          <a
-            href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
-            title="linkedin"
-            target="_blank"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/kxren_t/"
-            title="instagram"
-            target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://github.com/MthabiKT" title="github" target="_blank"
-            ><i class="fab fa-github"></i>
-          </a>
+              <p class="pt-5">
+                This code is
+                <a
+                  href="https://github.com/MthabiKT/portfolio-project"
+                  target="_blank"
+                  title="GitHub repository of this project"
+                  class="fs-6 text"
+                >
+                  open-sourced</a
+                >
+              </p>
+              <p>© MthabiseniTsabedze 2022</p>
+            </div>
+            <div class="col-md-6 footer-right">
+              <div class="row justify-content-evenly">
+                <div class="col-md-2">
+                  <ul class="nav-links list-unstyled">
+                    <li>
+                      <a href="#" class="nav-link" title="homepage">Home</a>
+                    </li>
+                    <li>
+                      <a href="#works" class="nav-link" title="Works section"
+                        >Works</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#about" class="nav-link" title="About section"
+                        >About</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#contact" class="nav-link" title="Contact me"
+                        >Contact</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="col-md-2">
+                  <div class="contacts">
+                    <div>
+                      <div class="email pb-3 pt-4">
+                        <a href="mthabisenit@gmail.com" title="Mthabi's E-mail"
+                          >mthabisenit@gmail.com</a
+                        >
+                      </div>
+                      <div class="contact-icons">
+                        <ul class="contact-list list-unstyled d-flex p-2">
+                          <li>
+                            <a
+                              href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+                              target="_blank"
+                              title="Viktoriia's Linkedin"
+                              ><i class="bi bi-linkedin p-3"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a
+                              href="https://www.instagram.com/kxren_t/"
+                              target="_blank"
+                              title="Viktoriia's Instagram"
+                              ><i class="bi bi-instagram p-3"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a
+                              href="https://github.com/MthabiKT"
+                              target="_blank"
+                              title="Viktoriia's GitHub"
+                              ><i class="bi bi-github p-3"></i>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <p class="text-center mb-4">
-          This project was coded by Mthabiseni Karen Tsabedze
-          <a href="https://github.com/MthabiKT">Open-Sourced </a>
-        </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
