--- a/about.html
+++ b/about.html
@@ -25,6 +25,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <script
       src="https://kit.fontawesome.com/1ba27f1bfa.js"
       crossorigin="anonymous"
@@ -100,33 +104,94 @@
       </div>
     </div>
     <footer>
-      <div class="container pt-5"></div>
-      <div
-        class="contact-box d-flex justify-content-evenly mb-5 d-none d-lg-flex"
-      >
-        <div>
-          <h3>Work Inquiry</h3>
-          <p>Lets work together</p>
-        </div>
-        <div>
-          <a href="/contact.html" title="contact" class="btn btn-branding mt-3">
-            Contact Me</a
-          >
+      <div class="bg">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 footer-left">
+              <a href="#" class="logo" title="logo">Mthabiseni.Tsabedze </a>
+
+              <p class="pt-5">
+                This code is
+                <a
+                  href="https://github.com/MthabiKT/portfolio-project"
+                  target="_blank"
+                  title="GitHub repository of this project"
+                  class="fs-6 text"
+                >
+                  open-sourced</a
+                >
+              </p>
+              <p>© MthabiseniTsabedze 2022</p>
+            </div>
+            <div class="col-md-6 footer-right">
+              <div class="row justify-content-evenly">
+                <div class="col-md-2">
+                  <ul class="nav-links list-unstyled">
+                    <li>
+                      <a href="/" class="nav-link" title="homepage">Home</a>
+                    </li>
+                    <li>
+                      <a href="#works" class="nav-link" title="Works section"
+                        >Works</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#about" class="nav-link" title="About section"
+                        >About</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#contact" class="nav-link" title="Contact me"
+                        >Contact</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="col-md-2">
+                  <div class="contacts">
+                    <div>
+                      <div class="email pb-3 pt-4">
+                        <a href="mthabisenit@gmail.com" title="Mthabi's E-mail"
+                          >mthabisenit@gmail.com</a
+                        >
+                      </div>
+                      <div class="contact-icons">
+                        <ul class="contact-list list-unstyled d-flex p-2">
+                          <li>
+                            <a
+                              href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
+                              target="_blank"
+                              title="Viktoriia's Linkedin"
+                              ><i class="bi bi-linkedin p-3"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a
+                              href="https://www.instagram.com/kxren_t/"
+                              target="_blank"
+                              title="Viktoriia's Instagram"
+                              ><i class="bi bi-instagram p-3"></i>
+                            </a>
+                          </li>
+                          <li>
+                            <a
+                              href="https://github.com/MthabiKT"
+                              target="_blank"
+                              title="Viktoriia's GitHub"
+                              ><i class="bi bi-github p-3"></i>
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="social-links d-flex justify-content-evenly mb-5">
-        <a href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
-        <a href="https://www.instagram.com/kxren_t/"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="https://github.com/MthabiKT"><i class="fab fa-github"></i> </a>
-      </div>
-      <p class="text-center mb-4">
-        This project was coded by Mthabiseni Karen Tsabedze
-        <a href="https://github.com/MthabiKT">Open-Sourced </a>
-      </p>
     </footer>
   </body>
 </html>
