--- a/index.html
+++ b/index.html
@@ -83,14 +83,36 @@
     </div>
     <div class="container">
       <div class="projects py-5">
-        <h3
+        <h4
           class="text-muted border-bottom border-info py-1 d-inline-block mb-5"
         >
           Projects
-        </h3>
+        </h4>
         <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-8"></div>
+          <div class="col-md-4">
+            <h2 class="sub-title mb-4 mb-5">React Dictionary</h2>
+            <p>
+              My most recent project I worked on. A dictionary made with react
+              with multiple components and an API integration to help user
+              search for any word
+            </p>
+            <a
+              href="https://vocal-starship-ad8530.netlify.app/"
+              target="_blank"
+              class="btn btn-launch-outline"
+              ><i class="bi bi-box-arrow-up-right"></i
+            ></a>
+            <a
+              href="https://github.com/MthabiKT/dictionary-project"
+              target="_blank"
+              class="btn btn-launch-outline"
+            >
+              <i class="bi bi-github"></i>
+            </a>
+          </div>
+          <div class="col-md-8">
+            <img src="images/react-dictionary.png" />
+          </div>
         </div>
       </div>
     </div>
